force-app/main/default/objects/CustomerOnboardingApplication__c/CustomerOnboardingApplication__c.object-meta.xml
<CustomObject>
    <label>Customer Onboarding Application</label>
    <nameField>
        <displayFormat>COB-{00000000}</displayFormat>
        <label>Customer Onboarding Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboarding Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>