force-app/main/default/objects/CustomerOnboardingApplication__c/fields/AustralianTaxResident__c.field-meta.xml
<CustomField>
    <fullName>AustralianTaxResident__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>True if the prospect has declared they are an Australian resident for tax purposes</description>
    <label>Australian Tax Resident</label>
    <type>Checkbox</type>
</CustomField>