force-app/main/default/objects/CustomerOnboardingApplication__c/fields/CXOnboardingAction__c.field-meta.xml
<CustomField>
    <fullName>CXOnboardingAction__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The action taken by the user that led to this event (e.g. primary_id_document_submitted)</description>
    <label>CX Onboarding Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>