force-app/main/default/objects/CustomerOnboardingApplication__c/fields/CXOnboardingStage__c.field-meta.xml
<CustomField>
    <fullName>CXOnboardingStage__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The stage during onboarding that was the context of this event (e.g. primary_id_collection)</description>
    <label>CX Onboarding Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>