force-app/main/default/objects/CustomerOnboardingApplication__c/fields/CXOnboardingStageReason__c.field-meta.xml
<CustomField>
    <fullName>CXOnboardingStageReason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Additional detail for the stage change. Optional field</description>
    <label>CX Onboarding Stage Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>