force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonEnrolmentId__c.field-meta.xml
<CustomField>
    <fullName>DaonEnrolmentId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The ID of the selfie enrolment</description>
    <label>Daon Enrolment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>