force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonEnrolmentTime__c.field-meta.xml
<CustomField>
    <fullName>DaonEnrolmentTime__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when the selfie was enrolled with Daon IdentityX</description>
    <label>Daon Enrolment Time</label>
    <type>DateTime</type>
</CustomField>