force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonEnrolmentType__c.field-meta.xml
<CustomField>
    <fullName>DaonEnrolmentType__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The type of enrolment</description>
    <label>Daon Enrolment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>