force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonEvaluationResultURI__c.field-meta.xml
<CustomField>
    <fullName>DaonEvaluationResultURI__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Link to the detailed ID evaluation results in Daon IdentityX, accessible by ID/Fraud agents</description>
    <label>Daon Evaluation Result URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>