force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonFalseMatchRate__c.field-meta.xml
<CustomField>
    <fullName>DaonFalseMatchRate__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The False Match Rate is the probability of a false match in Daon</description>
    <label>Daon False Match Rate</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>