force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonIdCheckPerformAt__c.field-meta.xml
<CustomField>
    <fullName>DaonIdCheckPerformAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time at which the results of this ID evaluation were known</description>
    <label>Daon Id Check Perform At</label>
    <type>DateTime</type>
</CustomField>