force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonIdCheckResult__c.field-meta.xml
<CustomField>
    <fullName>DaonIdCheckResult__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The result of the ID evaluation returned by Daon IdentityX after comparing primary ID and selfie, e.g.:
 - FAILED_DOC (the document did not match an accepted template)
 - MATCH (the selfie matched the document photo)
 - NO_MATCH (the document was valid but the selfie didn&apos;t match)
 - FAILED</description>
    <label>Daon Id Check Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>