force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonIdEvaluationSuccessful__c.field-meta.xml
<CustomField>
    <fullName>DaonIdEvaluationSuccessful__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Whether or not the ID check was successful overall</description>
    <label>Daon Id Evaluation Successful</label>
    <type>Checkbox</type>
</CustomField>