force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonScore__c.field-meta.xml
<CustomField>
    <fullName>DaonScore__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The confidence assigned to the image comparison by Daon</description>
    <label>Daon Score</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>