force-app/main/default/objects/CustomerOnboardingApplication__c/fields/DaonThreshold__c.field-meta.xml
<CustomField>
    <fullName>DaonThreshold__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The threshold required for Daon to establish a successful match</description>
    <label>Daon Threshold</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>