force-app/main/default/objects/CustomerOnboardingApplication__c/fields/ElectronicVerificationAcknowledged__c.field-meta.xml
<CustomField>
    <fullName>ElectronicVerificationAcknowledged__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>The user&apos;s response to the fact that EV has been completed</description>
    <label>Electronic Verification Acknowledged</label>
    <type>Checkbox</type>
</CustomField>