force-app/main/default/objects/CustomerOnboardingApplication__c/fields/ElectronicVerificationAcknowledgedAt__c.field-meta.xml
<CustomField>
    <fullName>ElectronicVerificationAcknowledgedAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when the acknowledgement was registered</description>
    <label>Electronic Verification Acknowledged At</label>
    <type>DateTime</type>
</CustomField>