force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>One of several valid employment statuses (defined by ANZ data governance)</description>
    <label>Employment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>