force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxAECResult__c.field-meta.xml
<CustomField>
    <fullName>EquifaxAECResult__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The Equifax result code generated by querying the AEC electoral roll</description>
    <label>Equifax AEC Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>