force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxAttemptCount__c.field-meta.xml
<CustomField>
    <fullName>EquifaxAttemptCount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Counter for Equifax check attempts. Used to prevent user from retrying Equifax once the limit is hit.</description>
    <label>Equifax Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>