force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxCheckPerformAt__c.field-meta.xml
<CustomField>
    <fullName>EquifaxCheckPerformAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time at which the results of this Equifax EV check were known</description>
    <label>Equifax Check Perform At</label>
    <type>DateTime</type>
</CustomField>