force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxCRAResult__c.field-meta.xml
<CustomField>
    <fullName>EquifaxCRAResult__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The Equifax result code generated by querying the Credit Risk Assessment database</description>
    <label>Equifax CRA Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>