force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxDVSResult__c.field-meta.xml
<CustomField>
    <fullName>EquifaxDVSResult__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The Equifax result code generated by querying government Document Verification Services</description>
    <label>Equifax DVS Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>