force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxEnquiryId__c.field-meta.xml
<CustomField>
    <fullName>EquifaxEnquiryId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The unique identifier that can be used by an agent to search for the results of a single Equifax check in the API portal</description>
    <label>Equifax Enquiry Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>