force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxESDResult__c.field-meta.xml
<CustomField>
    <fullName>EquifaxESDResult__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The Equifax result code generated by querying SuperChoice(SuperAnnuation) Data Source</description>
    <label>Equifax ESD Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>