force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxMatrixURI__c.field-meta.xml
<CustomField>
    <fullName>EquifaxMatrixURI__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Link to the individual&apos;s result matrix in the Equifax API portal, accessible by ID/Fraud agents</description>
    <label>Equifax Matrix URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>