force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EquifaxOverallResult__c.field-meta.xml
<CustomField>
    <fullName>EquifaxOverallResult__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The overall pass/fail result for the most recent EV call for this persona</description>
    <label>Equifax Overall Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>