force-app/main/default/objects/CustomerOnboardingApplication__c/fields/EventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EventTimestamp__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Storing the Unix time of when the event was published for the first time. This value is used to verify if the event is being replayed, if the current event&apos;s timestamp is less than the current timestamp stored on the record, a validation rule will prevent the record from being upserted, this is to avoid old data overwrite new data.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Event Timestamp</label>
    <length>25</length>
    <type>Text</type>
</CustomField>