force-app/main/default/objects/CustomerOnboardingApplication__c/fields/ForeignTaxResident__c.field-meta.xml
<CustomField>
    <fullName>ForeignTaxResident__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>True if the prospect has declared that they have tax obligations outside of Australia</description>
    <label>Foreign Tax Resident</label>
    <type>Checkbox</type>
</CustomField>