force-app/main/default/objects/CustomerOnboardingApplication__c/fields/Has_ID_Ops_Assistance_Cases__c.field-meta.xml
<CustomField>
    <fullName>Has_ID_Ops_Assistance_Cases__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if they is an ID Ops Assistance case for this customer/COB App</description>
    <label>Has ID Ops Assistance Cases</label>
    <type>Checkbox</type>
</CustomField>