force-app/main/default/objects/CustomerOnboardingApplication__c/fields/IDVFailReason__c.field-meta.xml
<CustomField>
    <fullName>IDVFailReason__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Descriptive text explaining the reason for a particular result from a given provider. Often this will contain error text that allows an agent determine the best approach for fallout resolution.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IDV Fail Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>