force-app/main/default/objects/CustomerOnboardingApplication__c/fields/OccupationCode__c.field-meta.xml
<CustomField>
    <fullName>OccupationCode__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The code identifying a valid occupation (defined by ANZ data governance)</description>
    <label>Occupation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>