force-app/main/default/objects/CustomerOnboardingApplication__c/fields/OccupationDescription__c.field-meta.xml
<CustomField>
    <fullName>OccupationDescription__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The descriptive text accompanying the occupation code (defined by ANZ data governance)</description>
    <label>Occupation Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>