force-app/main/default/objects/CustomerOnboardingApplication__c/fields/OccupationSubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>OccupationSubmittedAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when these occupation details were collected</description>
    <label>Occupation Submitted At</label>
    <type>DateTime</type>
</CustomField>