force-app/main/default/objects/CustomerOnboardingApplication__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time of the relevant occurrence (user action or system action)</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>