force-app/main/default/objects/CustomerOnboardingApplication__c/fields/OCVId__c.field-meta.xml
<CustomField>
    <fullName>OCVId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The OCVID supplied by OCV, which initially refers to the shadow profile and eventually the full customer profile</description>
    <label>OCV Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>