force-app/main/default/objects/CustomerOnboardingApplication__c/fields/OnboardingEvent__c.field-meta.xml
<CustomField>
    <fullName>OnboardingEvent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The most recent onboarding event for this prospect, that was triggered by either a user action or a downstream system response</description>
    <label>Onboarding Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>