force-app/main/default/objects/CustomerOnboardingApplication__c/fields/PersonaId__c.field-meta.xml
<CustomField>
    <fullName>PersonaId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The ForgeRock-minted UUID identifying the persona attempting to onboard</description>
    <externalId>true</externalId>
    <label>Persona Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>