force-app/main/default/objects/CustomerOnboardingApplication__c/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The ForgeRock-minted UUID identifying the person attempting to onboard</description>
    <label>Person ID (UUID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>