force-app/main/default/objects/CustomerOnboardingApplication__c/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The user&apos;s preferred name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>