force-app/main/default/objects/CustomerOnboardingApplication__c/fields/SecurityDetailsSubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SecurityDetailsSubmittedAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when user security details were collected</description>
    <label>Security Details Submitted At</label>
    <type>DateTime</type>
</CustomField>