force-app/main/default/objects/CustomerOnboardingApplication__c/fields/SecurityEmail__c.field-meta.xml
<CustomField>
    <fullName>SecurityEmail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The email entered during prospect registration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Security Email</label>
    <type>Email</type>
</CustomField>