force-app/main/default/objects/CustomerOnboardingApplication__c/fields/SecurityMobile__c.field-meta.xml
<CustomField>
    <fullName>SecurityMobile__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Temporal</complianceGroup>
    <description>The mobile number of the person&apos;s registered device</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Security Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>