force-app/main/default/objects/CustomerOnboardingApplication__c/fields/SelfieRegisteredAt__c.field-meta.xml
<CustomField>
    <fullName>SelfieRegisteredAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when this selfie was enrolled</description>
    <label>Selfie Registered At</label>
    <type>DateTime</type>
</CustomField>