force-app/main/default/objects/CustomerOnboardingApplication__c/fields/SelfieRegistrationChallengeId__c.field-meta.xml
<CustomField>
    <fullName>SelfieRegistrationChallengeId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The unique ID for the selfie challenge created by Daon IdentityX</description>
    <label>Selfie Registration Challenge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>