force-app/main/default/objects/CustomerOnboardingApplication__c/fields/TaxResidencyStatusDeclaredAt__c.field-meta.xml
<CustomField>
    <fullName>TaxResidencyStatusDeclaredAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when this tax residency declaration was made</description>
    <label>Tax Residency Status Declared At</label>
    <type>DateTime</type>
</CustomField>