force-app/main/default/objects/CustomerOnboardingApplication__c/fields/TncAcceptedAt__c.field-meta.xml
<CustomField>
    <fullName>TncAcceptedAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when the terms and conditions were accepted</description>
    <label>Tnc Accepted At</label>
    <type>DateTime</type>
</CustomField>