force-app/main/default/objects/CustomerOnboardingApplication__c/fields/TncName__c.field-meta.xml
<CustomField>
    <fullName>TncName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The specific T&amp;C list that was accepted (i.e., the code for the package or product)</description>
    <label>Tnc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>