force-app/main/default/objects/CustomerOnboardingApplication__c/fields/TncVersion__c.field-meta.xml
<CustomField>
    <fullName>TncVersion__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The version of the T&amp;Cs that were accepted</description>
    <label>Tnc Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>