force-app/main/default/objects/CustomerOnboardingApplication__c/fields/VerificationType__c.field-meta.xml
<CustomField>
    <fullName>VerificationType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>String enum indicating the type of verification that the prospect was ultimately onboarded by (Straight-through (STP, ASSISTED or MANUAL)</description>
    <label>Verification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>