force-app/main/default/objects/CustomerOnboardingApplication__c/validationRules/EventTimestampMustBeOlder.validationRule-meta.xml
<ValidationRule>
    <fullName>EventTimestampMustBeOlder</fullName>
    <active>true</active>
    <description>If an event with timestamp &lt; current timestamp on the COB Application, upsertion will fail.</description>
    <errorConditionFormula>VALUE(EventTimestamp__c)  &lt;   VALUE(PRIORVALUE(EventTimestamp__c) )</errorConditionFormula>
    <errorDisplayField>EventTimestamp__c</errorDisplayField>
    <errorMessage>COB Application data is being overwritten with stale data.</errorMessage>
</ValidationRule>