force-app/main/default/objects/CustomerOnboardingApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CXOnboardingStage__c</columns>
    <columns>PreferredName__c</columns>
    <columns>SecurityEmail__c</columns>
    <columns>SecurityMobile__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>